# affine-steerers

./: DeDoDe-Affine.ipynb  README.md  pyproject.toml  requirements.txt  setup.py
affine_steerers/: __init__.py  checkpoint.py  steerers.py  train.py  utils.py
affine_steerers/benchmarks/: __init__.py  hpatches.py  hpatches_oracle_steer.py  mega_pose_est.py  mega_pose_est_mnn.py  nll_benchmark.py  num_inliers.py
affine_steerers/datasets/: homog.py  megadepth.py
affine_steerers/descriptors/: dedode_descriptor.py  descriptor_loss.py
affine_steerers/detectors/: dedode_detector.py  keypoint_loss.py
affine_steerers/matchers/: dual_softmax_matcher.py
affine_steerers/model_zoo/: dedode_models.py
affine_steerers/transformer/: __init__.py
experiments/: aff_equi_B.py  aff_equi_G.py  aff_steer_B.py  aff_steer_G.py  aff_steer_pretrain_B.py  aff_steer_pretrain_G.py
