[tool.poetry]
name = "affine-steerers"
version = "0.1.0"
description = ""
authors = ["evanokeeffe <evanokeeffe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.3"
matplotlib = "^3.10.1"
torch = "^2.6.0"
torchvision = "^0.21.0"
h5py = "^3.13.0"
tqdm = "^4.67.1"
pillow = "^11.1.0"
einops = "^0.8.1"
opencv-python = "^4.11.0.86"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
